test/bad/class0.pacc
/*
nopacc 8:1 'invalid range'
*/

Bad :: char * ← [z-a] → { "foo" }
